# trifinger_object_tracking

./: .clang-format  .clang-format-ignore  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  doc_mainpage.rst  ed tags: ['bar', 'space tag']  package.xml  pyproject.toml  run_shit.bash  setup.py
.github/workflows/: build_master.yml  build_pr.yml  git_fixup.yml  pr_todo_checks.yml  style_checker.yml
demos/: demo_cameras.py  demo_lightblue_segmenter.cpp  demo_lightblue_segmenter.py  demo_tricamera_separate_backend.py  run_on_logfile.py
doc/: a1_introduction.rst  a2_cube_model.rst  b1_train_colour_segmentation.rst  breathing_cat.toml  cube_model.md  hdf5_log_files.rst  installation.rst  introduction.rst  train_colour_segmentation.md
gimp_plugin/: README.md  create_mask.py
include/trifinger_object_tracking/: base_object_tracker_backend.hpp  color_model.hpp  color_segmenter.hpp  cube_detector.hpp  cube_model.hpp  cube_visualizer.hpp  cv_sub_images.hpp  fake_object_tracker_backend.hpp  gmm_params.hpp  image.hpp  line_detector.hpp  object_pose.hpp  object_tracker_data.hpp  object_tracker_frontend.hpp  pose.hpp  pose_detector.hpp  program_options.hpp  pybullet_tricamera_object_tracker_driver.hpp  scoped_timer.hpp  simulation_object_tracker_backend.hpp  tricamera_object_observation.hpp  tricamera_object_tracking_driver.hpp  types.hpp  utils.hpp  xgboost_classifier.h  xgboost_classifier_single_color_rgb.h
scripts/: analyze_durations.py  create_background_data.py  debayering_tests.py  follow_cube.py  get_xgb_dump.py  plot_log_timestamps.py  record_debug_images.py  run_on_tricamera_hdf5.py  train_xgb_tree.py  tricamera_log_analyzer.py  tricamera_log_converter.py  tricamera_log_extract.py  tricamera_log_extract_object_poses.py  tricamera_log_to_hdf5.py  tricamera_log_viewer.py  view_masks.py  visualise_cube_target_pose.py
src/: base_object_tracker_backend.cpp  benchmark_with_logfile.cpp  color_segmenter.cpp  cube_detector.cpp  cube_model.cpp  cube_visualizer.cpp  cv_sub_images.cpp  fake_object_tracker_backend.cpp  gmm_params.cpp  gmm_weights_from_python.yml  image.cpp  line_detector.cpp  main.cpp  manual_annotation_hdf5.cpp  object_tracker_data.cpp  object_tracker_frontend.cpp  pose.cpp  pose_detector.cpp  program_options.cpp  pybullet_tricamera_object_tracker_driver.cpp  run.bash  run_all.bash  run_on_logfile.cpp  simulation_object_tracker_backend.cpp  single_observation.cpp  tricamera_object_tracking_driver.cpp  utils.cpp  xgboost_classifier.cpp
src/cube_v1/: xgboost_classifier.cpp
src/cube_v2/: xgboost_classifier.cpp
src/cuboid_2x2x8/: xgboost_classifier.cpp
src/xgb_single_color/: lightblue_rgb.cpp  segment_image.cpp
srcpy/: py_lightblue_segmenter.cpp  py_object_tracker.cpp  py_tricamera_types.cpp
test/: test_color_segmenter.cpp  test_cube_detector.cpp  test_cube_detector.py  test_cube_model.cpp  test_image.cpp  test_lightblue_segmenter.py  test_pose_detector.cpp  test_test_utils.cpp  utils.hpp
test/images/pose_detection/cube_v2/: camera_calib_180.yml  camera_calib_300.yml
test/images/pose_detection/object_v2/: camera_calib_60.yml
