<?xml version="1.0"?>
<package format="2">
  <name>trifinger_object_tracking</name>
  <version>0.1.0</version>
  <description>
      Object tracking for the TriFinger Platform.
  </description>

  <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>mpi_cmake_modules</build_depend>
  <build_depend>pybind11_catkin</build_depend>

  <depend>serialization_utils</depend>
  <depend>time_series</depend>

  <test_depend>roslib</test_depend>

  <export>
  </export>
</package>
