<?xml version="1.0"?>
<package format="2">
  <name>trifinger_object_tracking</name>
  <version>0.1.0</version>
  <description>
      Object tracking for the TriFinger Platform.
  </description>

  <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>

  <license>mixed</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>mpi_cmake_modules</build_depend>
  <build_depend>pybind11_vendor</build_depend>
  <build_depend>pybind11</build_depend>
  <build_depend>pybind11_opencv</build_depend>

  <depend>ament_index_cpp</depend>
  <depend>serialization_utils</depend>
  <depend>time_series</depend>
  <depend>trifinger_cameras</depend>
  <depend>robot_interfaces</depend>

  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
